--figureブロック記法を追加しました。
-_top.htmlのサイドバーが反映されなかったのを修正し、その他更新しました。
-月別の記事一覧も、ブログ設定のコンテンツ分離を参照するようにしました。
-静的出力で、プラグインJSも自動処理するようにしました。
-管理者メニューからブログを作成するとき、存在するブログをコピーできるようになりました。
-画像を貼り付ける際、強制的に出力されていた{<figure>}タグを必要に応じて出力するようにしました。
-画像を貼り付け方法を変更しました。
-アルバムのフォームを少し改良しました。
-スマホ表示時にCSSを強制リロードさせるため、ファイルの引数に更新日時を付加するようにしました。
-【plugin】プラグインイベントに #before/#after 修飾が追加されました。
-【plugin】ヘッダ検索ボックスを簡素にしました。
-【plugin】コンテンツリスト、タグリストプラグインで、階層スイッチを標準で閉じられるようにしました。
-【テーマ】テーマのオプションにデフォルト値を許可しました。
-【テーマ】rgba(255,255,255,0.7) などの形式の色カスタマイズに対応しました。
-【fix/テーマ】cuteテーマでサイドバー要素をクリックできない。
-【fix/テーマ】cuteテーマでスマホからアルバムを利用すると表示が崩れる。
-【fix】MarkdownでGMF Code Syntax（```～```）中の記法がパースされていた。
-【fix】perlキャッシュ環境で、DBの処理時間が0ms表示になり計測できないことがあった。
-【fix】CGI動作時、Text-DBで無駄な処理が発生していた。
-【fix】設定画面の「コメント許可対象」のUI動作が正しくなかった。
-【fix】テーマ表示テストの単一記事の仕様が古かった。
-【fix】スマホ表示の検索結果ボックスが横に大きすぎた。
-【fix】ドロップダウンメニューで項目がはみ出た時の表示を調整。
-【fix】ドロップダウンメニューのフリーサイズ表示が失敗してた。
-【fix】続きを読む記法使用時、最後のセクションにある注釈が短い表示の時に出力されていてた。
-【fix】HTTPリクエストヘッダの改行が LF になっていた。
-【fix/https】はてなブックマーク等の外部リソース読み込みが http: 決め打ちだった。
-【fix/plugin】子要素すべてが空タグでも、子要素展開用スイッチが出力されていた。
-【fix/スマホ】スマホメニューの5階層目以降が表示されていなかった。
-他多数

*Ver3.05 : 2016/11/12

-【fix】プラグインの再インストールを行うと、スマホメニューの設定情報が失われる。
-【Ver3.05a】default-logo.pngを更新
-【Ver3.05b】削除確認ダイアログが動作していなかった。
-【Ver3.05c】ドロップダウンメニューのCSSデザインが動作していなかった。

*Ver3.04 : 2016/11/11

-全文検索時、記事のタグも検索対象にしました。
-IE9以前の互換モードで起こるCSS XSS対策がまだ一部残っていたのでオフにしました。
-HTMLヘッダを自由に設定できるようになりました。（[https://twitter.com/nomura_games/status/773850665340710912:Thanks to nomura]）
-ドロップダウンメニューにタグ一覧を表示できるようになりました。（[https://twitter.com/goro_sanNomura/status/702506093340037121:Thanks to nomura]）
-記事入力画面を少し改良しました。
-【記法】数式入力を簡単にするTeXモードの実装
-【記法】麻雀記法の画像を別のものに変更しました。((麻雀記法を利用中の方は、ブログの再構築を実行してください。))
-【デザイン編集】はてなスタープラグインを追加（メイン部から）。
-【デザイン編集】ソーシャルボタンプラグインの表示をデフォルトでonにしました。
-【fix】adiary.conf.cgiの album_jpeg_quality の設定が有効にならない。（[http://adiary.blog.abk.nu/0387#c9:Thanks to 平山]）
-【fix】タグなし記事数に、非公開記事がカウントされてしまう。（[http://adiary.blog.abk.nu/0387#c4:Thanks to t-hide]）