@@ -26,6 +26,7 @@
 -画像を貼り付け方法を変更しました。
 -アルバムのフォームを少し改良しました。
 -スマホ表示時にCSSを強制リロードさせるため、ファイルの引数に更新日時を付加するようにしました。
+-Google Analyticsのコードを新しくしました。
 -【plugin】プラグインイベントに #before/#after 修飾が追加されました。
 -【plugin】ヘッダ検索ボックスを簡素にしました。
 -【plugin】コンテンツリスト、タグリストプラグインで、階層スイッチを標準で閉じられるようにしました。
